# godwin

./: .gitignore  Makefile.am  README.md  configure.ac  make_deb
debian/: changelog  control  rules
etc/: Makefile.am
etc/logrotate.d/: godwin
etc/nginx/sites-available/: godwin.conf
etc/zapata/backend-available/: godwin.conf
etc/zapata/conf.d/godwin/: api.conf  files.conf  mongodb.conf  redis.conf
include/: Makefile.am
include/godwin/: AGLayer.h  Matrix.h  NNLayer.h  config.h  godwin.h
src/: Makefile.am
src/api/: Makefile.am  godwin.cpp  godwin.lambda.cpp  godwin.oo.cpp
src/godwin/www/: index.md
src/lib/: AGLayer.cpp  Makefile.am  Matrix.cpp  NNLayer.cpp  godwin.cpp  nn.json  test.cpp
